--- a/style.css
+++ b/style.css
@@ -2,9 +2,50 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 html, body {
   width: 100%;
   height: 100%;
+}
+
+html {
+  background-color: #0F0F0F;
+  color: white;
+}
+
+body {
+  padding: 40px;
+}
+
+p {
+  margin-top: 16px;
+}
+
+h1 {
+  color: rgb(225, 29, 72);
+}
+
+button {
+  background-color: rgba(159, 18, 57, 0.24);
+  border: 1px solid rgb(225, 29, 72);
+  outline: none;
+  color: rgb(225, 29, 72);
+  border-radius: 4px;
+  padding: 6px 12px;
+  transition: all .35s ease;
+}
+button:focus-visible {
+  background-color: rgb(225, 29, 72);
+  border-color: rgb(255, 241, 242);
+  color: rgb(255, 241, 242);
+}
+button:hover {
+  background-color: rgb(225, 29, 72);
+  color: rgb(255, 241, 242);
+  cursor: pointer;
+}
+button:active {
+  background-color: rgb(244, 63, 94);
 }
