--- a/style/old.css
+++ b/style/old.css
@@ -1,17 +1,11 @@
+@import './reset.css';
+
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   font-family: 'Courier New', Courier, monospace;
 }
 
-html, body {
-  width: 100%;
-  height: 100%;
-}
-
 html {
-  background-color: #0F0F0F;
+  background-color: #0f0f0f;
   color: white;
 }
 
@@ -34,7 +28,7 @@ button {
   color: rgb(225, 29, 72);
   border-radius: 4px;
   padding: 6px 12px;
-  transition: all .35s ease;
+  transition: all 0.35s ease;
 }
 button:focus-visible {
   background-color: rgb(225, 29, 72);
@@ -48,4 +42,16 @@ button:hover {
 }
 button:active {
   background-color: rgb(244, 63, 94);
+}
+
+a {
+  display: inline-block;
+  margin-top: 40px;
+  color: rgb(6, 182, 212);
+  text-decoration: none;
+  position: relative;
+  transition: all 0.35s ease;
+}
+a:hover {
+  color: rgb(103, 232, 249);
 }
