--- a/style/color.css
+++ b/style/color.css
@@ -2,6 +2,7 @@ html {
   --zinc-900: #18181b;
   --zinc-800: #27272a;
   --zinc-700: #3f3f46;
+  --zinc-600: #52525B;
   --zinc-500: #71717a;
   --zinc-50: #fafafa;
 
