--- a/style/color.css
+++ b/style/color.css
@@ -1,12 +1,12 @@
 html {
-  --zinc-900: #18181b;
-  --zinc-800: #27272a;
-  --zinc-700: #3f3f46;
-  --zinc-600: #52525B;
-  --zinc-500: #71717a;
-  --zinc-50: #fafafa;
+  --zinc-900: 24, 24, 27;
+  --zinc-800: 39, 39, 42;
+  --zinc-700: 63, 63, 70;
+  --zinc-600: 82, 82, 91;
+  --zinc-500: 113, 113, 122;
+  --zinc-50: 250, 250, 250;
 
-  --lime-500: #84cc16;
+  --lime-500: 132, 204, 22;
 
-  --red-500: #ef4444;
+  --red-500: 239, 68, 68;
 }
