feat: add color variables for zinc 950, 300

--- a/style/color.css
+++ b/style/color.css
@@ -1,9 +1,11 @@
 html {
+  --zinc-950: 9, 9, 11;
   --zinc-900: 24, 24, 27;
   --zinc-800: 39, 39, 42;
   --zinc-700: 63, 63, 70;
   --zinc-600: 82, 82, 91;
   --zinc-500: 113, 113, 122;
+  --zinc-300: 212, 212, 216;
   --zinc-50: 250, 250, 250;
 
   --lime-500: 132, 204, 22;
