feat: add font variables for black 6xl and 9xl

--- a/style/font.css
+++ b/style/font.css
@@ -5,6 +5,8 @@ html {
 
   --text-black-normal: normal 900 1rem/1.5rem var(--roboto);
   --text-black-2xl: normal 900 1.5rem/2rem var(--roboto);
+  --text-black-6xl: normal 900 3.75rem/3.75rem var(--roboto);
+  --text-black-9xl: normal 900 8rem/8rem var(--roboto);
   --text-medium-xsmall: normal 500 0.75rem/1rem var(--roboto);
   --text-medium-normal: normal 500 1rem/1.5rem var(--roboto);
   --text-normal: normal 400 1rem/1.5rem var(--roboto);
